Revision history for Perl extension Web::Scraper

0.31  Sun Jul 19 00:43:54 PDT 2009
        - Use new LWP's content_charset method instead of HTTP::Response::Encoding
          (Thanks to hanekomu)

0.30  Wed Jul  8 15:47:21 PDT 2009
        - No warnings when use()d multiple times in the same package

0.29  Wed Jul  8 13:40:14 PDT 2009
        - Adds Web::Scraper::LibXML which uses HTML::TreeBuilder::LibXML
          (without the replace_original hack)

0.28  Sat Mar 28 14:31:45 PDT 2009
        - Call ->eof when parsing with HTML::TreeBuilder
          (Thanks to Tokuhiro Matsuno)

0.27  Tue Mar 24 12:09:04 PDT 2009
        - Added tests to use HTML::TreeBuilder::LibXML
          (Thanks to Tokuhiro Matsuno)

0.26  Thu Jan 15 11:37:56 PST 2009
        - Fixed an error message when GET request fails

0.25  Sun Jan 11 13:36:44 PST 2009
        - scrape() now accepts HTTP::Response as well for Remedie/Plagger
        - repository moved to github http://github.com/miyagawa/web-scraper/tree/master

0.24  Sun Nov 25 15:58:38 PST 2007
        - Support duck typing in filter args to take object that has 'filter' method
          This could give Web::Scraper::Filter::Pipe a better interface
          (Thanks to hanekomu and tokuhirom)

0.23  Sat Nov 24 17:21:14 PST 2007
        - Upped Web::Scraper dependency
        - Skip &amp; test until HTML::TreeBuilder::XPath fixes it
        - removed eg/search-cpan.pl

0.22  Wed Oct 17 17:51:54 PDT 2007
        - 's' on scraper shell now prints to pager (e.g. less) if PAGER is set

0.21_01 Thu Oct  4 01:05:00 PDT 2007
        - Added an experimental filter support
          (Thanks to hirose31, tokuhirom and Yappo for brainstorming)


0.21  Wed Oct  3 10:37:13 PDT 2007
        - Bumped up HTML::TreeBuilder dependency to fix 12_html.t issues
          [rt.cpan.org #29733]

0.20  Wed Oct  3 00:28:13 PDT 2007
        - Fixed a bug where URI is not absolutized with a hash reference value
        - Added eg/jp-playstation-store.pl
